make transfer updated